# aaa-test-repo1

./: .bandit.yml  .dockerignore  .env.example  .eslintrc.json  .gitleaks.toml  .pre-commit-config.yaml  .tflint.hcl  .trivyignore  README.md  SECURITY.md  docker-compose.yml  jest.config.js  pyproject.toml  pytest.ini  setup.cfg  setup.sh  test.txt
.ai-logs/templates/: decision-entry.md  session-summary.md  task-entry.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml  deploy.yml  security.yml  test-setup.yml
ai-team/: logging-format.md  routing-rules.md
ai-team/personas/core/: architect.md  backend.md  devops.md  docs.md  frontend.md  manager.md  qa.md  security.md
ai-team/personas/data/: data-engineer.md  nosql-db.md  sql-db.md  vector-db.md
ai-team/personas/documents/: doc-parser.md  doc-writer.md  markdown.md  ocr.md
ai-team/personas/integration/: api-integration.md  auth-integration.md  cloud.md  llm-integration.md
ai-team/personas/media/: 3d-assets.md  audio-gen.md  image-gen.md  video-gen.md
ai-team/workflows/: bug-fix.md  code-review.md  deployment.md  new-feature.md
config/: .editorconfig
config/.gitignore-templates/: general.gitignore  node.gitignore  powershell.gitignore  python.gitignore
docs/github-setup/: github-setup-steps.md
infrastructure/docker/: Dockerfile.node  Dockerfile.python  init-db.sql  nginx.conf
infrastructure/monitoring/: alerting-rules.yml  prometheus.yml
infrastructure/monitoring/grafana/provisioning/dashboards/: dashboards.yml
infrastructure/monitoring/grafana/provisioning/dashboards/json/: application-overview.json
infrastructure/monitoring/grafana/provisioning/datasources/: datasources.yml
infrastructure/scripts/: config.sh  deploy.sh  health-check.sh  setup-local.sh
infrastructure/terraform/: .gitignore
infrastructure/terraform/environments/production/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/environments/staging/: main.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/modules/app/: main.tf  outputs.tf  variables.tf
project-docs/: PRD-template.md  changelog-template.md  technical-spec-template.md
templates/api/: .env.example  README.md  requirements.txt
templates/api/config/: settings.py
templates/api/src/: app.py
templates/api/src/controllers/: __init__.py
templates/api/src/middleware/: __init__.py
templates/api/src/models/: __init__.py
templates/api/src/routes/: __init__.py
templates/api/src/utils/: __init__.py
templates/api/tests/: test_api.py
templates/powershell/: ProjectName.psd1  README.md
templates/powershell/src/: ProjectName.psm1
templates/powershell/src/Private/: Write-Log.ps1
templates/powershell/src/Public/: Get-Example.ps1
templates/powershell/tests/: ProjectName.Tests.ps1
templates/python/: .env.example  README.md  requirements-dev.txt  requirements.txt  setup.py
templates/python/src/: __init__.py
templates/webapp/: .env.example  README.md  package.json
templates/webapp/public/: index.html
templates/webapp/public/css/: styles.css
templates/webapp/public/js/: app.js
tests/: setup.js
tests/integration/: Dockerfile.test-setup  Dockerfile.ubuntu  create-test-repo.sh  docker-compose.test.yml  run-tests.sh  test-setup.sh
