# setup.cfg - Python project configuration
# Unified configuration for multiple tools

[metadata]
name = multi-agent-template
version = attr: src.__version__
description = Multi-agent template system for AI-assisted development
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires =
    # Add your dependencies here

[options.packages.find]
where = .
exclude =
    tests*
    docs*

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    pytest-asyncio>=0.21
    black>=23.0
    isort>=5.12
    flake8>=6.0
    mypy>=1.0
    pre-commit>=3.0

# =============================================================================
# flake8 configuration
# =============================================================================
[flake8]
max-line-length = 120
max-complexity = 10
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info,
    .eggs,
    .tox,
    node_modules
ignore =
    # line too long (handled by black)
    E501,
    # line break before binary operator (conflicts with black)
    W503,
    # whitespace before ':' (conflicts with black)
    E203
per-file-ignores =
    # imported but unused in __init__.py
    __init__.py: F401
    # tests can have longer lines and more complexity
    tests/*: E501, C901

# =============================================================================
# isort configuration
# =============================================================================
[isort]
profile = black
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    node_modules
known_first_party = src
known_third_party =
    flask,
    fastapi,
    pytest,
    requests

# =============================================================================
# mypy configuration
# =============================================================================
[mypy]
python_version = 3.11
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
exclude =
    tests/
    venv/
    .venv/
    build/
    dist/

[mypy-tests.*]
ignore_errors = true

# =============================================================================
# coverage configuration
# =============================================================================
[coverage:run]
source = src
branch = true
omit =
    */tests/*
    */__pycache__/*
    */venv/*
    */.venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
fail_under = 80
show_missing = true
skip_covered = false

[coverage:html]
directory = coverage_html

[coverage:xml]
output = coverage.xml

# =============================================================================
# tool.black (note: black doesn't read setup.cfg, use pyproject.toml)
# =============================================================================
# Black configuration should be in pyproject.toml

# =============================================================================
# bandit configuration
# =============================================================================
[bandit]
exclude_dirs = tests,venv,.venv
skips = B101,B311
